// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp should render if not IE9 comment close 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<!--<![endif]-->",
    }
  }
/>
`;

exports[`Timestamp should render if not IE9 comment open 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<!--[if !IE]><!-->",
    }
  }
/>
`;
